--- a/backend/Bookstore.API/Bookstore.API.csproj
+++ b/backend/Bookstore.API/Bookstore.API.csproj
@@ -13,9 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Bookstore.sqlite">
+    <Content Include="Bookstore.sqlite">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
 </Project>
